+ /level api with opened questions count
